--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 	
 	<h1>hello</h1>
 	
-	<span> I really hope this works man!, yes? no? asdfasfdasdssadsadsds</span>
+	
+
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.18.13'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 
 </body>
 </html>
