updating index.html content

--- a/index.html
+++ b/index.html
@@ -133,12 +133,10 @@
 					<img src="images/me.jpg" alt="Profile Photo" class="profile-photo-inner">
 
 					<span>
-						Im a front end developer, Graduated with a First class BA honours degree in Digital arts. 
+						I’m a web/digital design professional with a multi-faceted background in front end web development, responsive web design, UI and UX design. With a total of 3+ years experience in the tech/design industry.
 					</span>
 
-					<span> Currently employed as a developer at Gfroces, GForces is a leading provider of internet software and services. </span>
-
-					<span> My present role is to create websites and software for international Automotive Specialists. </span>
+					<span> Currently employed as a web designer at GLobe business media group. </span>
 
 					<span> Follow my progress by exploring my recent projects below.</span>
 
