--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					
 					<div class="logo">
 						<span class="logo-name">Thomas Morgan</span>
-						<span class="logo-description">Front-end developer</span>
+						<span class="logo-description">Web/digital designer</span>
 					</div>
 
 					<div class="navbar">
